[package]
name = "pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-threadpool = "0.3.0"
rayon = "1.6.1"
scheduled-thread-pool = "0.2.6"
scoped_threadpool = "0.1.9"
smol = "1.3.0"
threadpool = "1.8.1"
