[package]
name = "primive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.59"
bytes = "1.3.0"
futures-lite = "1.12.0"
rand = "0.8.5"
tokio = { version = "1.23.0", features = ["rt","rt-multi-thread"] }
